@@ -120,6 +120,40 @@ class ElasticApmTracerTest {
     @Test
     void testDisableStacktraces() {
         when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanStackTraceMinDurationMs()).thenReturn(-1L);
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanFramesMinDurationMs()).thenReturn(0L);
+
+        Transaction transaction = startTestRootTransaction();
+        try (Scope scope = transaction.activateInScope()) {
+            Span span = tracerImpl.getActive().createSpan();
+            try (Scope spanScope = span.activateInScope()) {
+                span.end();
+            }
+            transaction.end();
+        }
+        assertThat(reporter.getFirstSpan().getStacktrace()).isNull();
+    }
+
+    @Test
+    void testDisableStacktracesWithEnabledStackTraceAndDisabledFrames() {
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanStackTraceMinDurationMs()).thenReturn(0L);
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanFramesMinDurationMs()).thenReturn(0L);
+
+        Transaction transaction = startTestRootTransaction();
+        try (Scope scope = transaction.activateInScope()) {
+            Span span = tracerImpl.getActive().createSpan();
+            try (Scope spanScope = span.activateInScope()) {
+                span.end();
+            }
+            transaction.end();
+        }
+        assertThat(reporter.getFirstSpan().getStacktrace()).isNull();
+    }
+
+    @Test
+    void testDisableStacktracesWithDisabledStackTraceAndEnabledFrames() {
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanStackTraceMinDurationMs()).thenReturn(-1L);
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanFramesMinDurationMs()).thenReturn(-1L);
+
         Transaction transaction = startTestRootTransaction();
         try (Scope scope = transaction.activateInScope()) {
             Span span = tracerImpl.getActive().createSpan();
@@ -133,6 +167,7 @@ class ElasticApmTracerTest {
 
     @Test
     void testEnableStacktraces() throws InterruptedException {
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanFramesMinDurationMs()).thenReturn(-1L);
         when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanStackTraceMinDurationMs()).thenReturn(0L);
         Transaction transaction = startTestRootTransaction();
         try (Scope scope = transaction.activateInScope()) {
@@ -148,6 +183,7 @@ class ElasticApmTracerTest {
 
     @Test
     void testDisableStacktracesForFastSpans() {
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanFramesMinDurationMs()).thenReturn(100L);
         when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanStackTraceMinDurationMs()).thenReturn(100L);
         Transaction transaction = startTestRootTransaction();
         try (Scope scope = transaction.activateInScope()) {
@@ -163,6 +199,7 @@ class ElasticApmTracerTest {
 
     @Test
     void testEnableStacktracesForSlowSpans() throws InterruptedException {
+        when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanFramesMinDurationMs()).thenReturn(1L);
         when(tracerImpl.getConfig(StacktraceConfiguration.class).getSpanStackTraceMinDurationMs()).thenReturn(1L);
         Transaction transaction = startTestRootTransaction();
         try (Scope scope = transaction.activateInScope()) {
