@@ -35,7 +35,6 @@ exclude known static files in all applications might be changed to `/app/static/
 * The metrics `transaction.duration.sum.us`, `transaction.duration.count` and `transaciton.breakdown.count` are no longer recorded - {pull}2194[#2194]
 * Automatic hostname discovery mechanism had changed, so the resulted `host.name` and `host.hostname` in events reported
 by the agent may be different. This was done in order to improve the integration with host metrics in the APM UI.
-* Renamed `span_frames_min_duration` to `span_stack_trace_min_duration`. Updated logic with enabling and disabling of the stack traces capturing. - {pull}2220[#2220]
 
 [float]
 ===== Features
@@ -44,6 +43,8 @@ by the agent may be different. This was done in order to improve the integration
 * Added support to capture `context.message.routing-key` in rabbitmq, spring amqp instrumentations - {pull}1767[#1767]
 * Breakdown metrics are now tracked per service (when using APM Server 8.0) - {pull}2208[#2208]
 * Add support for Spring AMQP batch API - {pull}1716[#1716]
+* Added <<config-span-stack-trace-min-duration,`span_stack_trace_min_duration`>> option. This options sets the minimum duration of a span
+for which stack frames will be captured. This option works together with `span_frames_min_duration` - {pull}2220[#2220]
 
 [float]
 ===== Performance improvements
